removed some correct and wrong styling as didnt implement it, simplified timer, removed some class setting for correct and wrong as didnt implement, rearranged some functions for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,21 +55,6 @@ main {
     padding: 20px 0;
 }
 
-.correct {
-    background-color: green;
-}
-.correct:hover {
-    background-color: rgb(7, 255, 7);
-}
-.wrong {
-    background-color: darkred;
-
-}
-.wrong:hover {
-    background-color: red;
-
-}
-
 span {
     color: red;
 }
@@ -77,6 +62,7 @@ span {
 h3 {
     display: flex;
     justify-content: center;
+    font-size: 32px;
 }
 
 button {
